<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.udacity.caraher.emma.project0.MainActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textSize="28sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies_app"
        android:id="@+id/popularMovies"
        android:layout_below="@+id/title"
        android:layout_marginTop="32dp"
        android:layout_alignLeft="@+id/makeYourAppMaterial"
        android:layout_alignStart="@+id/makeYourAppMaterial"
        android:layout_alignRight="@+id/makeYourAppMaterial"
        android:layout_alignEnd="@+id/makeYourAppMaterial"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:width="250dp"
        android:typeface="monospace"
        android:textStyle="bold"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_app"
        android:id="@+id/stockHawk"
        android:layout_below="@+id/popularMovies"
        android:layout_alignRight="@+id/popularMovies"
        android:layout_alignEnd="@+id/popularMovies"
        android:layout_alignLeft="@+id/popularMovies"
        android:layout_alignStart="@+id/popularMovies"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:width="250dp"
        android:typeface="monospace"
        android:textStyle="bold"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_app"
        android:id="@+id/buildItBigger"
        android:layout_below="@+id/stockHawk"
        android:layout_alignLeft="@+id/stockHawk"
        android:layout_alignStart="@+id/stockHawk"
        android:layout_alignRight="@+id/stockHawk"
        android:layout_alignEnd="@+id/stockHawk"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:width="250dp"
        android:typeface="monospace"
        android:textStyle="bold"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material_app"
        android:id="@+id/makeYourAppMaterial"
        android:layout_below="@+id/buildItBigger"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:width="250dp"
        android:typeface="monospace"
        android:textStyle="bold"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubiquitous_app"
        android:id="@+id/goUbiquitous"
        android:layout_below="@+id/makeYourAppMaterial"
        android:layout_alignLeft="@+id/makeYourAppMaterial"
        android:layout_alignStart="@+id/makeYourAppMaterial"
        android:layout_alignRight="@+id/makeYourAppMaterial"
        android:layout_alignEnd="@+id/makeYourAppMaterial"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:width="250dp"
        android:typeface="monospace"
        android:textStyle="bold"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app"
        android:id="@+id/capstone"
        android:layout_below="@+id/goUbiquitous"
        android:layout_alignLeft="@+id/goUbiquitous"
        android:layout_alignStart="@+id/goUbiquitous"
        android:layout_alignRight="@+id/goUbiquitous"
        android:layout_alignEnd="@+id/goUbiquitous"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:width="250dp"
        android:typeface="monospace"
        android:textStyle="bold"
        android:onClick="displayToast" />
</RelativeLayout>
